# SonarJam

./: .gitignore  AGENTS.md  Cargo.toml  README.md  已批准技术基线.md  技术宪法.md  无技术创意文档.md
content/entities/: bt.glb  bt_muddy_man.glb
docs/: L0-感知反转-镜山备忘.md  L0-技术宪法.md  L0-无技术创意文档.md  L0-第三次重建-引擎化技术底座.md  L1-技术设计总纲.md  L2-01-运行时状态机设计-参考.md  L2-02-内容管线设计.md  L2-03-循环与世界切换设计.md  L3-01-Spike实现契约.md  L3-02-Blender作者规范.md  L3-02-blender-authoring-memo.md  L3-03-Phase3树泄漏事件实现说明.md  RTB-已批准技术基线.md
docs/ui-mockups/: README.md  crosshair_energy_warnings.README.md  crosshair_energy_warnings.html
src/: main.rs
src/app/: config.rs  game.rs  mod.rs
src/audio/: mod.rs
src/bt/: mod.rs
src/content/: mod.rs
src/narrative/: mod.rs
src/ui/: mod.rs  (+1 more)
tools/: add_c_for_specials.py  add_crashed_and_terrain.py  add_ruin_c.py  apply_h_cover_transform.py  beautify_12345.py  blender_inspect.py  build_12345.py  build_phase3_tree_leak.py  build_riverwall.py  build_shoreline_wall.py  build_shoreline_wall_param.py  check_3_for_tree.py  check_3_state.py  check_corridor.py  check_crashed_objects.py  check_nature_mats.py  clean_bt_disconnected.py  cull_west.py  decimate_mountain.py  decimate_rocket.py  diag_origin.py  diag_positions_12345.py  diag_rocket.py  diag_shuttle.py  diag_shuttle_mat.py  diagnose_tripo_face_flyout.py  dup_r_to_c.py  export_54321_all.py  export_to_level.py  extract_shuttle_pbr.py  finalize_12345.py  finalize_ship_room.py  find_cjk_tree.py  find_key_tree_mesh.py  find_missing_c.py  find_real_shuttle.py  fix_key_tree.py  fix_key_tree_v2.py  fix_lander.py  fix_lander_v2.py  (+45 more)
(+10 files in other folders)
